# myairdesk-bot

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/client/: Cargo.toml  lib.rs
