[package]
name = "myairdesk_lib"
version = "0.0.1"
authors = ["dhervas"]
edition = "2021"

[lib]
name = "myairdesk_lib"
path = "lib.rs"

[dependencies]
base64 = "0.22.0"
chrono = "0.4.37"
reqwest = { version = "0.12.2", features = ["cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1", features = ["full"] }
